# SERS

./: .gitignore  README.md
backend/: CMakeLists.txt  main.cpp  optional.hpp
backend/algorithms/: Dijkstra.cpp  Dijkstra.h
backend/api/: Routes.cpp  Routes.h
backend/dispatch/: DispatchManager.cpp  DispatchManager.h  Severity.h
backend/graph/: Graph.cpp  Graph.h  Node.h
backend/resources/: EmergencyHub.h  ResourceManager.cpp  ResourceManager.h
data/: users.txt
frontend/: index.html
frontend/css/: style.css
frontend/js/: dispatch.js  main.js  map.js
